# coding-learning-review

./: .gitignore  README.md  README_CN.md  pyproject.toml
scripts/: fetch_meta.py  generate_insights.py
src/leetrevive/: cli.py  db.py  meta.py  models.py  scheduler.py  utils.py
src/leetrevive/commands/: add.py  bank.py  done.py  open_.py  review.py  serve.py  stats.py  today.py
src/leetrevive/data/: __init__.py  insights.json  problems_meta.json
src/leetrevive/web/: __init__.py  server.py
src/leetrevive/web/static/: index.html
tests/: conftest.py  test_commands.py  test_db.py  test_flows.py  test_scheduler.py
