[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leetrevive"
version = "0.1.0"
description = "Terminal-first LeetCode review assistant"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "platformdirs>=4",
]

[project.scripts]
leetrevive = "leetrevive.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
web = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]

[tool.hatch.build.targets.wheel]
packages = ["src/leetrevive"]

[tool.hatch.build.targets.wheel.shared-data]
# Ensure the bundled metadata JSON is included in the installed package.
# importlib.resources resolves it via the leetrevive.data package.

[tool.hatch.build.force-include]
"src/leetrevive/data/problems_meta.json" = "leetrevive/data/problems_meta.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
